scss/app.scss
/* ... */
/*  =====================
	Level complete modal
 ======================= */

#levelCompleteModal{
	display: block;
	opacity: 1;
	visibility: visible;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	margin: auto;
	height: 14em;
	text-align: center;
	opacity: 0;
	z-index: -99;
	&.open{
		z-index: 99;
	}
	.levelNumber{
		padding: 0;
	}
}

.levelCompleteButtons li{
	text-align: center;
}

.finalLevel{
	display: none;
}

.playAgainButton{
	float: none;
	display: block;
	width: 100%;
	padding: 3%;

	@media #{$small-up}{ 
		float: left;
		margin-bottom: 0;
	}
}

.nextLevelButton, .resetGameButton{
	float: none;
	display: block;
	width: 100%;
	padding: 3%;

	@media #{$small-up}{ 
		float: right;
		margin-bottom: 0;
	}

	&.playNowButton{
		width: 130px;
		float: none;
		margin: 0 auto;
	}
}

#finalModal{
	display: none;
}	

body#finalLevel{
	#finalModal{
		display: block;
	}
	#nextModal{
		display: none;
	}
}

.finalScore{
	margin-bottom: 20px;

	span{
		color: crimson;
	}
}

.total{
	margin: 10px 0 0 20px;
	span{
		color: crimson;
	}
}

.scoreList{
	margin: 0;
	li{
		padding: 0;
		list-style-type: none;
		text-align: left;
	}	
}


.startPage{
	width: 100%;
	height: 100%;
	visibility: hidden;

	.startContent{
		position: absolute;
		z-index: 10;
		text-align: center;
		top: 0;
		right: 0;
		left: 0;
		bottom: 0;
		margin: auto;
		width: 42em;
		height: 24em;
		max-width: 100%;
		.startPageLogo{
			display: inline-block;
			position: relative;
			width: 50%;
			padding-bottom: 40%;
			vertical-align: middle;
			overflow: hidden;

			.mainLogo{
				display: inline-block;
				position: absolute;
				top: 0;
				left: 0;
				path, polygon{
					fill: #ffffff;
				}
			}
		}
	}
}
	

/*  =====================
	GRID
  ======================= */
 
 .gridWrapper{
	position: absolute;
	z-index: 0; 
	top: 0; 
	width: 100%;  
	height: 100%;
	display: block;
	text-align: center;
	-webkit-transition: opacity 1s linear;
	-moz-transition: opacity 1s linear;
	-o-transition: opacity 1s linear;
	transition: opacity 1s linear;
 }
 
.gridHelper{
	display: inline-block;
	vertical-align: middle;
	height: 100%;	
}

.gridContainer{	
	display: inline-block;
	vertical-align: middle;
	padding: 10px 0 10px 0;	
}

.gridContentCover{
	display: none;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 100;
}

.levelInfo{
	top: 0;
}

.bottomBar{
	bottom: 0;
	position: absolute;
	width: 100%;
	text-align: center;
	z-index: 12;
	p{
		margin: 0;
		font-size: 0.9rem;
		@media #{$medium-up}{
			font-size: 1rem;
		}

		a{
			color: #ffffff;
		}

		a:hover{
			text-decoration: underline;
		}
	}
}

.levelInfo{
	visibility: visible;
	position: absolute;
	width: 100%;
	text-align: center;
	-webkit-transition: all 1s linear 1.5s;
	-moz-transition: all 1s linear 1.5s;
	-o-transition: all 1s linear 1.5s;
	transition: all 1s linear 1.5s;

	a{
		display: block;
		color: #ffffff;
		background: rgba(22, 22, 22, 0.4);
	}
}

.flipCounter{
	display: inline-block;
	p{
		margin: 0;
	}
}

.levelNumber{
	display: inline-block;
	padding-right: 30px;
	p{
		margin: 0;
	}
}

.levelInfoSidebar{
	display: none;
	margin: 0 0 10px 0;
	-webkit-transition: all 1s linear 1.5s;
	-moz-transition: all 1s linear 1.5s;
	-o-transition: all 1s linear 1.5s;
	transition: all 1s linear 1.5s;

	.levelNumber{
		width: 100%;
		text-align: center;
		position: relative;
		text-align: left;
		margin: 0;
	}
	.flipCounter{
		width: 100%;		
		p{
			margin: 0;
		}
	}
}

.resetWrap{
	position: absolute;
	top: 0;
	right: 0;
	width: 20px;
	height: 20px;
}


/*  =====================
	Flippers
  ======================= */

.flipGrid{
 	margin: 0 2%;
	border-left: 2px solid #ccc;
	border-top: 2px solid #ccc;
	box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.6);
	-webkit-box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.6);
	-o-box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.6);
	-moz-box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.6); 
	@media #{$medium-up}{
		box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.5);
		-webkit-box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.5);
		-o-box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.5);
		-moz-box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.5); 
	}	
}
  
.flipGrid > li{
	padding: 0;
	margin: 0;
 	border-right: 2px solid #ccc;
	border-bottom: 2px solid #ccc; 
}

.flipContainer{
	display: block;
	width: auto;
	padding-bottom: 100%;
	position: relative;
}

.flipContainerRel{
	width: 100%; 
	height: 100%; 
	position: relative;
}

.flipCard {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
}

.flipContent {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
	-webkit-perspective: 1000px;
	-moz-perspective: 1000px;
	-o-perspective: 1000px;
	perspective: 1000px;
}

.flipCard {
	width: 100%;
	height: 100%;
	-webkit-transform-style: preserve-3d;
	-webkit-transition: all 0.3s linear;
	-moz-transform-style: preserve-3d;
	-moz-transition: all 0.3s linear;
	-o-transform-style: preserve-3d;
	-o-transition: all 0.3s linear;
	transform-style: preserve-3d;
	transition: all 0.3s linear;
}

.flipContent.active .flipCard {
	-webkit-transform: rotateY(180deg);
	-moz-transform: rotateY(180deg);
	-o-transform: rotateY(180deg);
	transform: rotateY(180deg);	
}

.flipFaceImage{
	max-width: 100%;
}

.face {
	position: absolute;
	width: 100%;
	height: 100%;
	text-align: right;
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	-o-backface-visibility: hidden;
	backface-visibility: hidden;
}

.face.front {
	background: url(../images/frontFaceBG.png) #ffffff;
	background-size: contain;
	-webkit-transition: all 0.3s linear;
	-moz-transition: all 0.3s linear;
	-o-transition: all 0.3s linear;
	transition: all 0.3s linear;

	&:hover{
		background: #d4d4d4;
		background-size: contain;
	}
}
/* ... */

